rust/src/methods/encode/html/snapshots/html_fragments@subscript.html.snap
---
source: rust/src/methods/encode/html/mod.rs
expression: encoded
input_file: fixtures/fragments/html/subscript.html

---
<article slot="root" itemtype="https://schema.org/Article" itemscope>
  <div slot="content">
    <p itemtype="https://stenci.la/Paragraph" itemscope>Subscripts like H<sub itemtype="https://stenci.la/Subscript" itemscope>2</sub>0.</p>
  </div>
</article>
