rust/src/methods/encode/html/snapshots/html_fragments@superscript.html.snap
---
source: rust/src/methods/encode/html/mod.rs
expression: encoded
input_file: fixtures/fragments/html/superscript.html

---
<article data-itemscope="root" itemtype="http://schema.org/Article" itemscope>
  <div data-itemprop="content">
    <p itemtype="http://schema.stenci.la/Paragraph" itemscope>Superscripts like CO<sup itemtype="http://schema.stenci.la/Superscript" itemscope>2</sup>.</p>
  </div>
</article>
