rust/src/methods/encode/html/snapshots/html_fragments@video.html.snap
---
source: rust/src/methods/encode/html/mod.rs
expression: encoded
input_file: fixtures/fragments/html/video.html

---
<article slot="root" itemtype="https://schema.org/Article" itemscope>
  <div slot="content">
    <p itemtype="https://stenci.la/Paragraph" itemscope>Prefers to use `source` element:<video itemtype="https://schema.org/VideoObject" itemscope  controls>
        <source src="video.mp4" type="video/mp4">
        </source>
      </video>
    </p>
    <p itemtype="https://stenci.la/Paragraph" itemscope>Falls back to using `src` on `video` element:<video itemtype="https://schema.org/VideoObject" itemscope  controls>
        <source src="video.mp4">
        </source>
      </video>
    </p>
  </div>
</article>
